[package]
edition = "2021"
name = "dojo-catan"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy-tokio-tasks = "0.11.0"
bevy_flycam = "0.11.0"
parking_lot = "0.12.1"
starknet = "0.6.0"
tokio = { version = "1.33.0", features = [ "full" ] }

# dojo-types = { git = "https://github.com/kariy/dojo", branch = "torii-client-send", version = "0.3.1" }
# torii-client = { git = "https://github.com/kariy/dojo", branch = "torii-client-send", version = "0.3.1" }

dojo-types = { path = "../../work/dojoengine/dojo/crates/dojo-types" }
torii-client = { path = "../../work/dojoengine/dojo/crates/torii/client" }
url = "2.4.1"
